# wallpaperQuickShell

./: CMakeLists.txt  README.md  WallpaperSelector.qml  abrir.sh  shell.qml
components/: qmldir
components/controls/: qmldir
components/effects/: qmldir
components/images/: CachingImage.qml  qmldir
config/: LauncherConfig.qml  qmldir
modules/launcher/: WallpaperList.qml
modules/launcher/items/: WallpaperItem.qml
plugin-src/Caelestia/Internal/: cachingimagemanager.cpp  cachingimagemanager.hpp
scripts/: warm-wallpaper-cache.sh
services/: qmldir
utils/: qmldir
